[tool.poetry]
name = "leadfead-client"
version = "0.1.0"
description = ""
authors = ["PLAKSHERiE <67220210+PLAKSHERiE@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "leadfead_client"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
