[tool.poetry]
name = "leadfeed-client"
version = "0.1.0"
description = ""
authors = ["PLAKSHERiE <67220210+PLAKSHERiE@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "leadfeed_client"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.6"
webdriver-manager = "^4.0.1"
selenium-wire = "^5.1.0"
pydantic = "^2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
